# stasiak.at

./: Makefile  README.md  README.rst  pelicanconf.py  publishconf.py  pyproject.toml  redirects  serve-local
content/: a-semi-paranoid-multi-lan-wireguard-vpn.rst  accessing-scaleway-logs-with-logcli.rst  aws-opensearch-access-adventures.rst  feed-reader-testbed.rst  first-post.rst  index.html  jakub@stasiak.at.asc  my-usual-strace-options.rst  optimizing-ansible-unix.rst  perfect-is-the-friend-of-never.rst  prewarming-restored-rds-postgres-instance.rst  python-dependency-groups.rst  robots.txt  rust-data-exploration.rst  rust-sdl-audio.rst  sea-is-not-land.rst  stub-only-python-package-naming.rst  the-519-forgotten-pixels.rst  type-safety-and-units.rst  unable-to-mount-root-fs-dont-panic.rst  whats-next-for-python-dependency-injection.rst  writing-screenplays-like-a-programmer.rst
content/pages/: contact.rst  projects.rst
content/static/fonts/: LICENSE.txt
plugins/: header_permalinks.py  js_toc.py
stasiak.at-theme/static/: styles.css
stasiak.at-theme/templates/: article.html  base.html  index.html  tag.html  tags.html
tools/: dev  edit-notes  newpost
